<resources>
    <string name="app_name">GithubUser</string>
    <string name="github">GitHub</string>
    <string name="back_to_home">Back to home</string>

    <!-- Content Description -->
    <string name="github_icon">github background icon transparant</string>
    <string name="users_company">User\'s Company</string>
    <string name="back_button">back button</string>
    <string name="user_image_profile">User Image Profile</string>
    <string name="users_location">User\'s Location</string>
    <string name="share_detail_layout">share detail layout</string>
    <string name="repositories">amount of repositor of user that have</string>

    <!-- dummy text -->
    <string name="names">thatnawfal</string>
    <string name="username">NawfalHadi</string>
    <string name="_17">17</string>
    <string name="Banjarmasin">Banjarmasin</string>

    <!-- activity_detail_user.xml -->

    <string name="submission_dicoding_fundamental">Submission Dicoding Fundamental</string>
    <string name="_company">that Company</string>

    <!--  Other string resources -->
    <string-array name="username">
        <item>NawfalHadi</item>
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>
    <string-array name="name">
        <item>thatnawfal</item>
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <string-array name="location">
        <item>Indonesia</item>
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>
    <integer-array name="repository">
        <item>20</item>
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </integer-array>
    <string-array name="company">
        <item>that company</item>
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>
    <integer-array name="followers">
        <item>9</item>
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </integer-array>
    <integer-array name="following">
        <item>21</item>
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </integer-array>
    <integer-array name="avatar">
        <item>@drawable/avatar</item>
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_finduser">Try to \nFind Another User ?</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>