<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/transparant"
    app:cardCornerRadius="0dp"
    android:elevation="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_header_profile">

        <ImageButton
            android:id="@+id/back_button_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/transparant"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view_right_align"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"/>

        <View
            android:id="@+id/view_bottom_align"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_margin="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <include
            android:id="@+id/repo_user_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/detail_user_repo"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/_ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/repo_user_detail"
            app:layout_constraintTop_toBottomOf="@id/repo_user_detail"
            android:contentDescription="@string/users_location" />

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Banjarmasin"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/_ic_location"
            app:layout_constraintTop_toTopOf="@id/_ic_location"
            app:layout_constraintBottom_toBottomOf="@id/_ic_location" />

        <ImageView
            android:id="@+id/_ic_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_company"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/users_company"
            app:layout_constraintEnd_toEndOf="@id/_ic_location"
            app:layout_constraintTop_toBottomOf="@id/_ic_location" />

        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_company"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/_ic_company"
            app:layout_constraintTop_toTopOf="@id/_ic_company"
            app:layout_constraintBottom_toBottomOf="@id/_ic_company"/>


        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/image_github"
            android:rotation="-16"
            android:alpha="0.30"

            app:layout_constraintStart_toStartOf="@id/view_right_align"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/github_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>